force-app/main/default/objects/Research_Opportunity_Team_Member__c/fields/I_RS_Date_Added__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Date_Added__c</fullName>
    <description>Date when the project member was included to the project team</description>
    <label>Date Added</label>
    <type>Date</type>
</CustomField>