force-app/main/default/objects/Research_Opportunity_Team_Member__c/fields/I_RS_Date_Removed__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Date_Removed__c</fullName>
    <description>Date when the Researcher approved the involvement of the team member for the project</description>
    <label>Date Removed</label>
    <type>Date</type>
</CustomField>