force-app/main/default/objects/Research_Opportunity_Team_Member__c/fields/I_RS_Internal_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Internal_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Research Office internal user</description>
    <label>Internal Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Research_Opportunity_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>