force-app/main/default/objects/Research_Opportunity_Team_Member__c/fields/I_RS_Research_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Opportunity__c</fullName>
    <label>Funding Opportunity</label>
    <referenceTo>Research_Opportunity__c</referenceTo>
    <relationshipLabel>Funding Opportunity Team Members</relationshipLabel>
    <relationshipName>Research_Opportunity_Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>