force-app/main/default/objects/Research_Opportunity_Team_Member__c/fields/I_RS_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Member</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.I_RM_La_Trobe_Staff__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Funding Opportunity Team Members</relationshipLabel>
    <relationshipName>Funding_Opportunity_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>