force-app/main/default/objects/Research_Opportunity_Team_Member__c/listViews/All_Research_Opportunity_Team_Members.listView-meta.xml
<ListView>
    <fullName>All_Research_Opportunity_Team_Members</fullName>
    <columns>NAME</columns>
    <columns>I_RS_External_Id__c</columns>
    <columns>I_RS_Internal_Team_Member__c</columns>
    <columns>I_RS_Research_Opportunity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Research Opportunity Team Members</label>
</ListView>